begin working on farmer problem

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTfTpa21YZ2Jyn9l6ys8uR",
+      "authorship_tag": "ABX9TyOmewuc/Gr9D8uOpPlbu9hg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,8 @@
       "cell_type": "markdown",
       "source": [
         "### This notebook is python basics\n",
+        "\n",
+        "Colab & Jupyter provides ability to make **notebooks**. Notebooks allow you to create *text* and *code* cells. Text cells support MarkDown. Code cells require python.\n",
         "\n",
         "**Python Datatypes**\n",
         "* int\n",
@@ -65,8 +67,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### AI agent notes\n",
+        "\n",
+        "**the representation problem** - how to represent a problem in programming language.\n"
+      ],
+      "metadata": {
+        "id": "hBML85-GB73f"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "farmer_on_top = True\n"
+      ],
       "metadata": {
         "id": "aokSyJit8Rif"
       },
