updated notes (representation), worked on state for farmer problem

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmewuc/Gr9D8uOpPlbu9hg",
+      "authorship_tag": "ABX9TyMe/Eke8aFTWvYjIUv+BD2X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "RQOakTQuj1_A",
         "colab": {
@@ -69,21 +69,41 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### AI agent notes\n",
+        "#The Representation Problem\n",
+        "How do we code states and actions of a real world problem in a programming language?\n",
         "\n",
-        "**the representation problem** - how to represent a problem in programming language.\n"
+        "**PEAS**\n",
+        "* Performance measure\n",
+        "* Environment\n",
+        "  * includes **state** and\n",
+        "  * rules for how **actions** update the state\n",
+        "* Actions\n",
+        "* Sensors - the portion of the world state that the agent can see\n",
+        "\n",
+        "* agent - an autonomous program that sees through sensors and determines actions\n",
+        "\n",
+        "coninuous vs. discreet\n",
+        "\n",
+        "## Example: farmer, wolf, sheep, oats & river problem"
       ],
       "metadata": {
-        "id": "hBML85-GB73f"
+        "id": "HOrx-Y-3OOI8"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "farmer_on_top = True\n"
+        "# STATE\n",
+        "farmer_top = True\n",
+        "wolf_top = True\n",
+        "sheep_top = True\n",
+        "oats_top = True\n",
+        "\n",
+        "oats_alive = True\n",
+        "sheep_alive = True"
       ],
       "metadata": {
-        "id": "aokSyJit8Rif"
+        "id": "vmLUvmjyP5sl"
       },
       "execution_count": null,
       "outputs": []
