added function to print current state

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe/Eke8aFTWvYjIUv+BD2X",
+      "authorship_tag": "ABX9TyMz853Y/f7lVoRVHzpE90Uh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,19 +94,70 @@
       "cell_type": "code",
       "source": [
         "# STATE\n",
+        "\n",
+        "# object locations\n",
         "farmer_top = True\n",
         "wolf_top = True\n",
         "sheep_top = True\n",
         "oats_top = True\n",
         "\n",
+        "# loss conditions (lose if either is false)\n",
         "oats_alive = True\n",
-        "sheep_alive = True"
+        "sheep_alive = True\n",
+        "\n",
+        "def print_state():\n",
+        "  \"\"\" Print all parties on top of river bank, followed by\n",
+        "  =======,\n",
+        "  then all parties below river bank \"\"\"\n",
+        "  if farmer_top:\n",
+        "    print('Farmer')\n",
+        "  if wolf_top:\n",
+        "    print('Wolf')\n",
+        "  if sheep_top:\n",
+        "    print('Sheep')\n",
+        "  if oats_top:\n",
+        "    print('Oats')\n",
+        "  print('==========')\n",
+        "  if not farmer_top:\n",
+        "    print('Farmer')\n",
+        "  if not wolf_top:\n",
+        "    print('Wolf')\n",
+        "  if not sheep_top:\n",
+        "    print('Sheep')\n",
+        "  if not oats_top:\n",
+        "    print('Oats')\n",
+        "\n",
+        "\n",
+        "# ACTIONS\n",
+        "\n",
+        "def move(gort):\n",
+        "  \"\"\" Updates STATE variables given that the farmer moves something\"\"\"\n",
+        "  # TODO\n",
+        "\n",
+        "##########\n",
+        "print_state()"
       ],
       "metadata": {
-        "id": "vmLUvmjyP5sl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vmLUvmjyP5sl",
+        "outputId": "a0942afe-c2c2-4911-9df1-43ef25b9dd15"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Farmer\n",
+            "Wolf\n",
+            "Sheep\n",
+            "Oats\n",
+            "==========\n"
+          ]
+        }
+      ]
     }
   ]
 }
