added function to move objects across river

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMz853Y/f7lVoRVHzpE90Uh",
+      "authorship_tag": "ABX9TyMK0Qi/t/V66vBvmVXRZ77F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,7 +132,16 @@
         "\n",
         "def move(gort):\n",
         "  \"\"\" Updates STATE variables given that the farmer moves something\"\"\"\n",
-        "  # TODO\n",
+        "  if gort==\"wolf\"\n",
+        "    wolf_top = not wolf_top\n",
+        "  elif gort==\"sheep\"\n",
+        "    sheep_top = not sheep_top\n",
+        "  elif gort==\"oats\"\n",
+        "    oats_top = not oats_top\n",
+        "  else\n",
+        "    return\n",
+        "  farmer_top = not farmer_top\n",
+        "  return\n",
         "\n",
         "##########\n",
         "print_state()"
@@ -144,7 +153,7 @@
         "id": "vmLUvmjyP5sl",
         "outputId": "a0942afe-c2c2-4911-9df1-43ef25b9dd15"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
