fixed move function

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMK0Qi/t/V66vBvmVXRZ77F",
+      "authorship_tag": "ABX9TyN+SEMOz14S85eKV0Hsy1RL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,13 +132,13 @@
         "\n",
         "def move(gort):\n",
         "  \"\"\" Updates STATE variables given that the farmer moves something\"\"\"\n",
-        "  if gort==\"wolf\"\n",
+        "  if gort==\"wolf\":\n",
         "    wolf_top = not wolf_top\n",
-        "  elif gort==\"sheep\"\n",
+        "  elif gort==\"sheep\":\n",
         "    sheep_top = not sheep_top\n",
-        "  elif gort==\"oats\"\n",
+        "  elif gort==\"oats\":\n",
         "    oats_top = not oats_top\n",
-        "  else\n",
+        "  else:\n",
         "    return\n",
         "  farmer_top = not farmer_top\n",
         "  return\n",
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vmLUvmjyP5sl",
-        "outputId": "a0942afe-c2c2-4911-9df1-43ef25b9dd15"
+        "outputId": "53d95777-c5d1-40d4-d03e-3bf12cb4b1a5"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
