updated move function to check that farmer is on same side as moved object

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+SEMOz14S85eKV0Hsy1RL",
+      "authorship_tag": "ABX9TyMG4NyckZTjy7YH9I9PVVJd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,17 +126,18 @@
         "    print('Sheep')\n",
         "  if not oats_top:\n",
         "    print('Oats')\n",
+        "  print('\\n')\n",
         "\n",
         "\n",
         "# ACTIONS\n",
         "\n",
         "def move(gort):\n",
         "  \"\"\" Updates STATE variables given that the farmer moves something\"\"\"\n",
-        "  if gort==\"wolf\":\n",
+        "  if gort==\"wolf\" and farmer_top==wolf_top:\n",
         "    wolf_top = not wolf_top\n",
-        "  elif gort==\"sheep\":\n",
+        "  elif gort==\"sheep\" and farmer_top==sheep_top:\n",
         "    sheep_top = not sheep_top\n",
-        "  elif gort==\"oats\":\n",
+        "  elif gort==\"oats\" and farmer_top==oats_top:\n",
         "    oats_top = not oats_top\n",
         "  else:\n",
         "    return\n",
@@ -144,7 +145,13 @@
         "  return\n",
         "\n",
         "##########\n",
-        "print_state()"
+        "while True:\n",
+        "  print_state()\n",
+        "\n",
+        "  s1 = str(input())\n",
+        "  if not (oats_alive and sheep_alive):\n",
+        "    print(\"you lose\")\n",
+        "    break"
       ],
       "metadata": {
         "colab": {
