move function now allows farmer to move alone, while loop added for play state

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMG4NyckZTjy7YH9I9PVVJd",
+      "authorship_tag": "ABX9TyOsDaAgx53XGhmjv1FcKLsR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,13 +135,17 @@
         "  \"\"\" Updates STATE variables given that the farmer moves something\"\"\"\n",
         "  if gort==\"wolf\" and farmer_top==wolf_top:\n",
         "    wolf_top = not wolf_top\n",
+        "    farmer_top = not farmer_top\n",
         "  elif gort==\"sheep\" and farmer_top==sheep_top:\n",
         "    sheep_top = not sheep_top\n",
+        "    farmer_top = not farmer_top\n",
         "  elif gort==\"oats\" and farmer_top==oats_top:\n",
         "    oats_top = not oats_top\n",
+        "    farmer_top = not farmer_top\n",
+        "  elif gort==\"none\":\n",
+        "    farmer_top = not farmer_top\n",
         "  else:\n",
         "    return\n",
-        "  farmer_top = not farmer_top\n",
         "  return\n",
         "\n",
         "##########\n",
