move function still broken, added win and loss states

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsDaAgx53XGhmjv1FcKLsR",
+      "authorship_tag": "ABX9TyMqz9GytiksAir9VS+zBSAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,7 +126,8 @@
         "    print('Sheep')\n",
         "  if not oats_top:\n",
         "    print('Oats')\n",
-        "  print('\\n')\n",
+        "  if farmer_top and wolf_top and sheep_top and oats_top:\n",
+        "    print('')\n",
         "\n",
         "\n",
         "# ACTIONS\n",
@@ -152,19 +153,26 @@
         "while True:\n",
         "  print_state()\n",
         "\n",
-        "  s1 = str(input())\n",
+        "  s1 = str(input('move: '))\n",
+        "  print('')\n",
+        "  move(s1)\n",
+        "\n",
         "  if not (oats_alive and sheep_alive):\n",
         "    print(\"you lose\")\n",
+        "    break\n",
+        "  if not (farmer_top and wolf_top and sheep_top and oats_top):\n",
+        "    print(\"you win\")\n",
         "    break"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 462
         },
         "id": "vmLUvmjyP5sl",
-        "outputId": "53d95777-c5d1-40d4-d03e-3bf12cb4b1a5"
+        "outputId": "df009541-1e3c-4011-ca07-71a491f0f13c"
       },
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +182,22 @@
             "Wolf\n",
             "Sheep\n",
             "Oats\n",
-            "==========\n"
+            "==========\n",
+            "\n",
+            "move: wolf\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "UnboundLocalError",
+          "evalue": "cannot access local variable 'farmer_top' where it is not associated with a value",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3914531525.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'move: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m \u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moats_alive\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0msheep_alive\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-3914531525.py\u001b[0m in \u001b[0;36mmove\u001b[0;34m(gort)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgort\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m   \u001b[0;34m\"\"\" Updates STATE variables given that the farmer moves something\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mgort\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"wolf\"\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfarmer_top\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mwolf_top\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m     \u001b[0mwolf_top\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mwolf_top\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mfarmer_top\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mfarmer_top\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'farmer_top' where it is not associated with a value"
           ]
         }
       ]
