added check for oats and sheep alive

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqz9GytiksAir9VS+zBSAa",
+      "authorship_tag": "ABX9TyPHB5sZ+NSLg9fUtOL+FQB6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,6 +134,10 @@
         "\n",
         "def move(gort):\n",
         "  \"\"\" Updates STATE variables given that the farmer moves something\"\"\"\n",
+        "  if gort not in['wolf', 'sheep', 'oats', '']:\n",
+        "    print('invalid')\n",
+        "    return False\n",
+        "\n",
         "  if gort==\"wolf\" and farmer_top==wolf_top:\n",
         "    wolf_top = not wolf_top\n",
         "    farmer_top = not farmer_top\n",
@@ -153,26 +157,43 @@
         "while True:\n",
         "  print_state()\n",
         "\n",
-        "  s1 = str(input('move: '))\n",
+        "  gort = str(input('move: '))\n",
         "  print('')\n",
-        "  move(s1)\n",
+        "  if gort==\"wolf\" and farmer_top==wolf_top:\n",
+        "    wolf_top = not wolf_top\n",
+        "    farmer_top = not farmer_top\n",
+        "  elif gort==\"sheep\" and farmer_top==sheep_top:\n",
+        "    sheep_top = not sheep_top\n",
+        "    farmer_top = not farmer_top\n",
+        "  elif gort==\"oats\" and farmer_top==oats_top:\n",
+        "    oats_top = not oats_top\n",
+        "    farmer_top = not farmer_top\n",
+        "  elif gort==\"\":\n",
+        "    farmer_top = not farmer_top\n",
+        "  else:\n",
+        "    print('invalid \\n')\n",
+        "\n",
+        "  if sheep_top == wolf_top != farmer_top:\n",
+        "    sheep_alive = False\n",
+        "  elif sheep_top == oats_top != farmer_top:\n",
+        "    oats_alive = False\n",
         "\n",
         "  if not (oats_alive and sheep_alive):\n",
         "    print(\"you lose\")\n",
         "    break\n",
-        "  if not (farmer_top and wolf_top and sheep_top and oats_top):\n",
+        "  if not (farmer_top or wolf_top or sheep_top or oats_top):\n",
         "    print(\"you win\")\n",
         "    break"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 462
+          "height": 1000
         },
         "id": "vmLUvmjyP5sl",
-        "outputId": "df009541-1e3c-4011-ca07-71a491f0f13c"
+        "outputId": "019ad9b8-8755-4e4f-f49f-7822403a2266"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,20 +205,56 @@
             "Oats\n",
             "==========\n",
             "\n",
+            "move: sheep\n",
+            "\n",
+            "Wolf\n",
+            "Oats\n",
+            "==========\n",
+            "Farmer\n",
+            "Sheep\n",
+            "move: none\n",
+            "\n",
+            "Farmer\n",
+            "Wolf\n",
+            "Oats\n",
+            "==========\n",
+            "Sheep\n",
             "move: wolf\n",
-            "\n"
+            "\n",
+            "Oats\n",
+            "==========\n",
+            "Farmer\n",
+            "Wolf\n",
+            "Sheep\n",
+            "move: sheep\n",
+            "\n",
+            "Farmer\n",
+            "Sheep\n",
+            "Oats\n",
+            "==========\n",
+            "Wolf\n",
+            "move: egg\n",
+            "\n",
+            "invalid \n",
+            "\n",
+            "Farmer\n",
+            "Sheep\n",
+            "Oats\n",
+            "==========\n",
+            "Wolf\n"
           ]
         },
         {
           "output_type": "error",
-          "ename": "UnboundLocalError",
-          "evalue": "cannot access local variable 'farmer_top' where it is not associated with a value",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3914531525.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'move: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m \u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moats_alive\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0msheep_alive\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-3914531525.py\u001b[0m in \u001b[0;36mmove\u001b[0;34m(gort)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgort\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m   \u001b[0;34m\"\"\" Updates STATE variables given that the farmer moves something\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mgort\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"wolf\"\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfarmer_top\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mwolf_top\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m     \u001b[0mwolf_top\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mwolf_top\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mfarmer_top\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mfarmer_top\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'farmer_top' where it is not associated with a value"
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3222747849.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m   \u001b[0mprint_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m   \u001b[0mgort\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'move: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mgort\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"wolf\"\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfarmer_top\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mwolf_top\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
           ]
         }
       ]
