--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHB5sZ+NSLg9fUtOL+FQB6",
+      "authorship_tag": "ABX9TyPMrAAWfR2Wqcc2pVFgDidE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,7 +138,14 @@
         "    print('invalid')\n",
         "    return False\n",
         "\n",
-        "  if gort==\"wolf\" and farmer_top==wolf_top:\n",
+        "  if gort == 'wolf':\n",
+        "    legal = farmer_top==wolf_top\n",
+        "  elif gort == 'sheep':\n",
+        "    legal = farmer_top==sheep_top\n",
+        "  elif gort == 'oats':\n",
+        "    legal = farmer_top==oats_top\n",
+        "\n",
+        "  \"\"\"if gort==\"wolf\" and farmer_top==wolf_top:\n",
         "    wolf_top = not wolf_top\n",
         "    farmer_top = not farmer_top\n",
         "  elif gort==\"sheep\" and farmer_top==sheep_top:\n",
@@ -151,7 +158,7 @@
         "    farmer_top = not farmer_top\n",
         "  else:\n",
         "    return\n",
-        "  return\n",
+        "  return\"\"\"\n",
         "\n",
         "##########\n",
         "while True:\n",
@@ -188,73 +195,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 105
         },
         "id": "vmLUvmjyP5sl",
-        "outputId": "019ad9b8-8755-4e4f-f49f-7822403a2266"
+        "outputId": "564f7412-378d-4bef-9fb5-6f9dcbb59961"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Farmer\n",
-            "Wolf\n",
-            "Sheep\n",
-            "Oats\n",
-            "==========\n",
-            "\n",
-            "move: sheep\n",
-            "\n",
-            "Wolf\n",
-            "Oats\n",
-            "==========\n",
-            "Farmer\n",
-            "Sheep\n",
-            "move: none\n",
-            "\n",
-            "Farmer\n",
-            "Wolf\n",
-            "Oats\n",
-            "==========\n",
-            "Sheep\n",
-            "move: wolf\n",
-            "\n",
-            "Oats\n",
-            "==========\n",
-            "Farmer\n",
-            "Wolf\n",
-            "Sheep\n",
-            "move: sheep\n",
-            "\n",
-            "Farmer\n",
-            "Sheep\n",
-            "Oats\n",
-            "==========\n",
-            "Wolf\n",
-            "move: egg\n",
-            "\n",
-            "invalid \n",
-            "\n",
-            "Farmer\n",
-            "Sheep\n",
-            "Oats\n",
-            "==========\n",
-            "Wolf\n"
-          ]
-        },
-        {
           "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
+          "ename": "IndentationError",
+          "evalue": "expected an indented block after 'if' statement on line 47 (ipython-input-5624239.py, line 50)",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3222747849.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m   \u001b[0mprint_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m   \u001b[0mgort\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'move: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mgort\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"wolf\"\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfarmer_top\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mwolf_top\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-5624239.py\"\u001b[0;36m, line \u001b[0;32m50\u001b[0m\n\u001b[0;31m    '''if gort==\"wolf\" and farmer_top==wolf_top:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 47\n"
           ]
         }
       ]
