--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMrAAWfR2Wqcc2pVFgDidE",
+      "authorship_tag": "ABX9TyNpEnhKV1oJLWnA4BmhbYgJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,17 +145,18 @@
         "  elif gort == 'oats':\n",
         "    legal = farmer_top==oats_top\n",
         "\n",
-        "  \"\"\"if gort==\"wolf\" and farmer_top==wolf_top:\n",
+        "  if not legal:\n",
+        "    print(\"illegal move\")\n",
+        "    return False\n",
+        "\n",
+        "  \"\"\"\n",
+        "  farmer_top = not farmer_top\n",
+        "  if gort==\"wolf\":\n",
         "    wolf_top = not wolf_top\n",
-        "    farmer_top = not farmer_top\n",
-        "  elif gort==\"sheep\" and farmer_top==sheep_top:\n",
+        "  elif gort==\"sheep\":\n",
         "    sheep_top = not sheep_top\n",
-        "    farmer_top = not farmer_top\n",
-        "  elif gort==\"oats\" and farmer_top==oats_top:\n",
+        "  elif gort==\"oats\":\n",
         "    oats_top = not oats_top\n",
-        "    farmer_top = not farmer_top\n",
-        "  elif gort==\"none\":\n",
-        "    farmer_top = not farmer_top\n",
         "  else:\n",
         "    return\n",
         "  return\"\"\"\n",
