added list info

--- a/pythonBasics.ipynb
+++ b/pythonBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpEnhKV1oJLWnA4BmhbYgJ",
+      "authorship_tag": "ABX9TyNLK6CqikpKSUwE36MbMUzV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,7 +201,7 @@
         "id": "vmLUvmjyP5sl",
         "outputId": "564f7412-378d-4bef-9fb5-6f9dcbb59961"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -209,6 +209,120 @@
           "evalue": "expected an indented block after 'if' statement on line 47 (ipython-input-5624239.py, line 50)",
           "traceback": [
             "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-5624239.py\"\u001b[0;36m, line \u001b[0;32m50\u001b[0m\n\u001b[0;31m    '''if gort==\"wolf\" and farmer_top==wolf_top:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 47\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# oop version\n",
+        "\n",
+        "class Game:\n",
+        "  def __init__(self):\n",
+        "    # object locations\n",
+        "    self.farmer_top = True\n",
+        "    self.wolf_top = True\n",
+        "    self.sheep_top = True\n",
+        "    self.oats_top = True\n",
+        "    # loss conditions (lose if either is false)\n",
+        "    self.oats_alive = True\n",
+        "    self.sheep_alive = True\n",
+        "\n",
+        "  def print_state(self):\n",
+        "    \"\"\" Print all parties on top of river bank, followed by\n",
+        "    =======,\n",
+        "    then all parties below river bank \"\"\"\n",
+        "    if farmer_top:\n",
+        "      print('Farmer')\n",
+        "    if wolf_top:\n",
+        "      print('Wolf')\n",
+        "    if sheep_top:\n",
+        "      print('Sheep')\n",
+        "    if oats_top:\n",
+        "      print('Oats')\n",
+        "    print('==========')\n",
+        "    if not farmer_top:\n",
+        "      print('Farmer')\n",
+        "    if not wolf_top:\n",
+        "      print('Wolf')\n",
+        "    if not sheep_top:\n",
+        "      print('Sheep')\n",
+        "    if not oats_top:\n",
+        "      print('Oats')\n",
+        "    if farmer_top and wolf_top and sheep_top and oats_top:\n",
+        "      print('')\n",
+        "\n",
+        "  def move(self,gort):\n",
+        "    if gort not in['wolf', 'sheep', 'oats', '']:\n",
+        "      print('invalid')\n",
+        "      return\n",
+        "\n",
+        "    if gort == 'wolf':\n",
+        "      legal = farmer_top==wolf_top\n",
+        "    elif gort == 'sheep':\n",
+        "      legal = farmer_top==sheep_top\n",
+        "    elif gort == 'oats':\n",
+        "      legal = farmer_top==oats_top\n",
+        "\n",
+        "    if not legal:\n",
+        "      print(\"illegal move\")\n",
+        "      return\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "etEiGFd9wmIy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**list index function** - Returns index of the first instance of target\n",
+        "\n",
+        "- myList.index(target)\n",
+        "\n",
+        "**pop** - removes list item at given index, defaults to last item\n",
+        "\n",
+        "- myList.pop(i)\n",
+        "\n",
+        "**append** - adds item to end of list\n",
+        "- myList.pop(item)\n"
+      ],
+      "metadata": {
+        "id": "NT2af4ENVxcK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_a = ['a',1,True,'Frog','Cat']\n",
+        "\n",
+        "target = 'Frog'\n",
+        "i=0\n",
+        "for e in list_a:\n",
+        "  if e == target:\n",
+        "    break\n",
+        "  i+=1\n",
+        "print('index is:',i)\n",
+        "print('index2 is:',list_a.index(target))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qXhRqFumUqvj",
+        "outputId": "9598e429-7b04-4586-e8c4-7ca76a602728"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "index is: 3\n",
+            "index2 is: 3\n"
           ]
         }
       ]
